--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ DB_PASS=12345678
 DB_PORT=5432
 JWT_SECRET=HarshSONI
 PORT=3000
+EMAIL_USER=harsh.soni18553@marwadieducation.edu.in
+EMAIL_PASS=Gpqn@164
+
