third commit, made db connection as production ready

--- a/.env
+++ b/.env
@@ -5,6 +5,5 @@ DB_PASS=12345678
 DB_PORT=5432
 JWT_SECRET=HarshSONI
 PORT=3000
-EMAIL_USER=harsh.soni18553@marwadieducation.edu.in
-EMAIL_PASS=Gpqn@164
-
+EMAIL_USER= for local use yours 
+EMAIL_PASS= for local use yours
